<resources>
    <string name="app_name">BeBetter</string>
    <string name="welcome">Welcome to BeBetter!</string>
    <string name="login">Please sign in or sign up with Google.</string>
    <string name="connection_error"> No network connection</string>
    <string name="challenges">Challenges</string>
    <string name="my_challenges">My Challenges</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="achievements">Achievements</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="search">Search</string>
    <string name="server_error">Error while connecting to server</string>
    <string name="city">City: </string>
    <string name="category">Category: </string>
    <string name="repeat_period">Repeat period: </string>
    <string name="start_time">Start time: </string>
    <string name="all">All</string>
    <string name="active">Ongoing</string>
    <string name="sign_in_result_error">Error with user authentication. Please sign out and in again.</string>
    <string name="shared_pref_filename">BeBetterSharedPreferences</string>
    <string name="user_id_field">USER_ID</string>
    <string name="sign_in_error">Sing in error</string>
    <string name="no_results">No results for given search</string>
    <string name="no_comments">No comments found</string>
    <string name="add_challenge">Add Challenge</string>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="confirmation_type">Confirmation type: </string>
    <string name="start_date">Start: </string>
    <string name="end_date">End: </string>
    <string name="add">Add</string>
    <string name="access_type">Access type: </string>
    <string name="empty_fields_error">Please fill in all fields</string>
    <string name="added_challenge">Added challenge to server</string>
    <string name="goal">Goal: </string>
    <string name="more_or_less">Aiming for more or less?</string>
    <string name="challenge">Challenge</string>
    <string name="times_per_week">Times per week: </string>
    <string name="for_">For: </string>
    <string name="join">Join</string>
    <string name="joined_challenge">Successfully joined challenge</string>
    <string name="challenge_not_started_yet">Challenge not started yet</string>
    <string name="edit_user_info">Edit user info</string>
    <string name="username">Username: </string>
    <string name="about_me">About me: </string>
    <string name="main_goal">Main goal: </string>
    <string name="ranking_points">Ranking points: </string>
    <string name="highest_streak">Highest streak: </string>
    <string name="edited_user_info">Saved</string>
    <string name="empty_username">Username field cannot be empty</string>
    <string name="empty_search">Search field cannot be empty</string>
    <string name="sort_by">Sort by: </string>
    <string name="search_hint">Search…</string>
    <string name="highest_streak_short">HS</string>
    <string name="ranking_points_short">RP</string>
    <string name="following">FOLLOWING</string>
    <string name="follower">FOLLOWER</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="find_users">Find users</string>
    <string name="show_comments">Show comments</string>
    <string name="hide_comments">Hide comments</string>
    <string name="comment_hint">Add your comment…</string>
    <string name="added_comment">Added comment</string>
    <string name="unknown_error_occurred">Error occurred. Please try again.</string>
    <string name="error_occurred">Error</string>
    <string name="created">Created</string>
    <string name="joined">Joined</string>
    <string name="uppercase_all">ALL</string>
    <string name="category_sport">SPORT</string>
    <string name="category_family">FAMILY</string>
    <string name="category_education">EDUCATION</string>
    <string name="category_work">WORK</string>
    <string name="category_lifestyle">LIFESTYLE</string>
    <string name="category_health">HEALTH</string>
    <string name="repeat_1_per_week">1 per week</string>
    <string name="repeat_2_per_week">2 per week</string>
    <string name="repeat_3_per_week">3 per week</string>
    <string name="repeat_4_per_week">4 per week</string>
    <string name="repeat_5_per_week">5 per week</string>
    <string name="repeat_6_per_week">6 per week</string>
    <string name="repeat_7_per_week">7 per week</string>
    <string name="state_not_started">NOT STARTED YET</string>
    <string name="state_started">STARTED</string>
    <string name="state_finished">FINISHED</string>
    <string name="state_not_finished">NOT FINISHED</string>
    <string name="private_access">PRIVATE</string>
    <string name="public_access">PUBLIC</string>
    <string name="check_task">CHECK TASK</string>
    <string name="counter_task">COUNTER TASK</string>
    <string name="error_less_that_zero">Value can\'t be less than zero</string>
    <string name="no_connection">"No internet connection. That change won't be saved. "</string>
    <string name="points">points</string>
    <string name="point">point</string>
    <string name="achievements_profile">Achievements:</string>
    <string name="reminder_text_default">Don\'t forget about your challenge today!</string>
    <string name="set_reminder">Set reminder:</string>
    <string name="default_time">12:00</string>
    <string name="setTime">Set time</string>
    <string name="reminder_set">Reminder set</string>
    <string name="reminder_canceled">Reminder canceled</string>
    <string name="hs_in_challenge">Highest streak in this challenge:</string>
    <string name="points_in_challenge">Total points gained in this challenge:</string>
    <string name="rp_desc">Ranking points descending</string>
    <string name="rp_asc">Ranking points ascending</string>
    <string name="hs_desc">Highest streak descencing</string>
    <string name="hs_asc">Highest streak ascencing</string>
    <string name="refresh">Refresh</string>
    <string name="turn_network_on_and_refresh">There is no network connection. Please turn the internet connection on and refresh.</string>
    <string name="channel_id_1">CHANNEL_1</string>
    <string name="challenge_history">Full challenge history:</string>
    <string name="from">"From "</string>
    <string name="to">"To "</string>
    <string name="days_with_goal_met_by_week_day">On how many days was the challenge goal met by week day:</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="sunday">SUNDAY</string>
    <string name="num_of_people_who_met_goal_each_day">How many participants done challenge in the following days:</string>
    <string name="exact_same_challenge_already_exists">That challenge was already added.</string>
    <string name="end_before_start">Challenge can\'t end before it starts. Please choose different date.</string>
</resources>
