<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <EditText
        android:id="@+id/searchEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="6sp"
        android:layout_marginTop="4sp"
        android:gravity="center"
        android:hint="@string/search_hint"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchBtn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:layout_marginTop="2sp"
        android:layout_marginBottom="6sp"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/secondaryColor"
        app:cornerRadius="8sp"
        app:strokeColor="@color/secondaryDarkColor"
        app:strokeWidth="2sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1sp" />

    <TextView
        android:id="@+id/noResultsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4sp"
        android:layout_marginVertical="20sp"
        android:gravity="center"
        android:paddingHorizontal="4sp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text="@string/no_results"
        android:textColor="@color/primaryDarkColor"
        android:textSize="16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/users_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        android:scrollbars="vertical" />

</LinearLayout>