<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginHorizontal="4sp"
                android:paddingHorizontal="4sp"
                android:paddingTop="5sp"
                android:paddingBottom="2sp"
                android:textColor="@color/secondaryDarkColor"
                android:text="@string/username"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/usernameEdit"
                android:layout_marginTop="2sp"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginHorizontal="5sp"
                android:layout_weight="1"
                android:textColor="@color/darkGrey"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginHorizontal="4sp"
                android:paddingHorizontal="4sp"
                android:paddingTop="5sp"
                android:paddingBottom="2sp"
                android:layout_weight="1"
                android:textColor="@color/secondaryDarkColor"
                android:text="@string/about_me"
                android:gravity="center"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/aboutMeEdit"
                android:layout_marginTop="2sp"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginHorizontal="5sp"
                android:layout_weight="1"
                android:textColor="@color/darkGrey"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginHorizontal="4sp"
                android:paddingHorizontal="4sp"
                android:paddingTop="5sp"
                android:paddingBottom="2sp"
                android:layout_weight="1"
                android:textColor="@color/secondaryDarkColor"
                android:text="@string/main_goal"
                android:gravity="center"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/mainGoalEdit"
                android:layout_marginTop="2sp"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginHorizontal="5sp"
                android:layout_weight="1"
                android:textColor="@color/darkGrey"
                android:textSize="18sp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="0sp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_marginTop="1sp" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/editBtn"
                android:layout_width="match_parent"
                android:layout_height="0sp"
                android:layout_marginTop="12sp"
                android:layout_marginBottom="10sp"
                android:layout_marginHorizontal="10sp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:text="@string/edit_user_info"
                app:strokeColor="@color/secondaryDarkColor"
                app:strokeWidth="2sp"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@color/secondaryColor"
                app:cornerRadius="8sp"
                />
</LinearLayout>