<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/categoryTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/category"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/repeatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/repeat_period"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

                <Spinner
                    android:id="@+id/repeatSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/start_time"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

                <Spinner
                    android:id="@+id/activeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cityTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/city"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

                <EditText
                    android:id="@+id/cityEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"/>

            </LinearLayout>


        </LinearLayout>
    </HorizontalScrollView>

    <EditText
        android:id="@+id/searchEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:hint="Search..."
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/searchBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/search"
        app:strokeColor="@color/secondaryDarkColor"
        app:strokeWidth="2dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:backgroundTint="@color/secondaryColor"
        app:cornerRadius="8dp"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="1dp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:scrollbars="vertical" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/secondaryColor"
            android:src="@drawable/ic_add_white_56dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="32sp"
            app:fabSize="normal"
            />
    </FrameLayout>

</LinearLayout>